# src/server/middleware/openapi.json
@@ -11,10 +11,10 @@
   },
   "servers": [
     {
-      "url": "https://talebearer.reelest.workers.dev"
+      "url": "https://talebearer.netlify.app/api"
     },
     {
-      "url": "http://localhost:8787"
+      "url": "http://localhost:8888/api"
     }
   ],
   "tags": [
@@ -26,9 +26,7 @@
   "paths": {
     "/version/{bundleId}": {
       "get": {
-        "tags": [
-          "sync"
-        ],
+        "tags": ["sync"],
         "summary": "Get the current server version of a project",
         "description": "Get the current server version which is the version of the last update.",
         "operationId": "getServerVersion",
@@ -85,11 +83,37 @@
         ]
       }
     },
+    "/upload/{bundleId}": {
+      "post": {
+        "tags": ["sync"],
+        "summary": "Upload bundle",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "bundleId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "Successfule",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/user": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Create user",
         "description": "This can only be done by the logged in user.",
         "operationId": "createUser",
@@ -134,9 +158,7 @@
     },
     "/user/createWithList": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Creates list of users with given input array",
         "description": "Creates list of users with given input array",
         "operationId": "createUsersWithListInput",
@@ -176,9 +198,7 @@
     },
     "/user/login": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Logs user into the system",
         "description": "",
         "operationId": "loginUser",
@@ -242,9 +262,7 @@
     },
     "/user/logout": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Logs out current logged in user session",
         "description": "",
         "operationId": "logoutUser",
@@ -258,9 +276,7 @@
     },
     "/user/{username}": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Get user by user name",
         "description": "",
         "operationId": "getUserByName",
@@ -300,9 +316,7 @@
         }
       },
       "put": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Update user",
         "description": "This can only be done by the logged in user.",
         "operationId": "updateUser",
@@ -344,9 +358,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Delete user",
         "description": "This can only be done by the logged in user.",
         "operationId": "deleteUser",
